# catoptric_livox

./: .gitmodules  LICENSE  readme.md
calibration_tool/: .gitignore  CMakeLists.txt  calibration_gui.cpp  cost_fun.h  simulation_gui.cpp  utils.cpp  utils.h  utils_io.cpp  utils_io.h
calibration_tool/GL/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  glwrapper.h  objectsStatiBuffers.h  shaders_code.h
design/CAD/: livox_mirror_rev2 v10.f3z  livox_mirror_rev2 v10.step
design/DXF/: mirror_outline.dxf
design/FDM/: pyramid.3mf  pyramid.stl  support.3mf  support.stl
sample_data/: download.sh  test_lustro_hex_v2.ply
